--- a/src/scss/ui/_creaPodcast.scss
+++ b/src/scss/ui/_creaPodcast.scss
@@ -1,4 +1,5 @@
 @use 'base/mixins' as m;
+@use 'base/variables' as v;
 
 .crear-grid {
     text-align: center;
@@ -7,5 +8,9 @@
         text-align: left;
         @include m.grid(2, 2rem);
         align-items: center;
+    }
+
+    h2 {
+        @include m.headingBorder(v.$secundario, v.$primario)
     }
 }
