plan section finished

--- a/src/scss/ui/_index.scss
+++ b/src/scss/ui/_index.scss
@@ -1,5 +1,7 @@
 @forward 'header';
-@forward 'botones';
 @forward 'creaPodcast';
 @forward 'beneficios';
 @forward 'estadisticas';
+@forward 'planes';
+
+@forward 'botones';
