--- a/src/scss/ui/_botones.scss
+++ b/src/scss/ui/_botones.scss
@@ -11,3 +11,10 @@
         margin: 0;
     }
 }
+
+.boton-plan {
+    @extend .boton-primario;
+    border: 2px solid v.$blanco;
+    margin-top: 2rem;
+    display: block;
+}
