--- a/src/scss/ui/_testimoniales.scss
+++ b/src/scss/ui/_testimoniales.scss
@@ -18,14 +18,22 @@
         }
     }
 
-    h2 {
-        @include m.headingBorder(v.$secundario, v.$primario);
+    .contenido {
+        text-align: center;
+
+        @include m.tablet {
+            text-align: left;
+        }
+
+        h2 {
+            @include m.headingBorder(v.$secundario, v.$primario);
+        }
     }
 
-        img {
-            margin: 0 auto;
-        }
-        
+    img {
+        margin: 0 auto;
+    }
+
 }
 
 
@@ -35,26 +43,30 @@
         background-color: v.$primario;
         border: .5rem solid v.$secundario;
         margin-bottom: 4rem;
+
         &:last-of-type {
             margin-bottom: 0;
         }
+
         padding: 2rem;
         border-radius: 1rem;
         position: relative;
 
-        @include m.tablet { 
+        @include m.tablet {
             max-width: 70%;
 
             &:nth-child(2) {
                 margin-left: 10%;
             }
+
             &:nth-child(3) {
                 margin-left: 20%;
             }
+
             &:nth-child(4) {
                 margin-left: 30%;
             }
-         }
+        }
 
         &::before {
             content: '';
